--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,13 +21,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
       - name: Test with pytest
-        run: pytest tests.py --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        run: |
+          pip install pytest pytest-cov
+          pytest tests/test_*.py --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report xml:cov.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
+          name: pytest-results
+          path: junit/test-results.xml
+          # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-coverage
+          path: cov.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
