--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          python -m pytest tests/test_*.py --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report xml:cov.xml
+          python -m pytest tests\test_*.py --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report xml:cov.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
@@ -42,8 +42,8 @@ jobs:
       - name: Build the app
         run: |
           pip install pyinstaller
-          pyinstaller --onefile src/Game.py
-          cp -r images dist/images
+          pyinstaller --onefile src\Game.py
+          cp -r images dist\images
         
       - name: Upload the app
         uses: actions/upload-artifact@v4
