--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          python -m pytest tests\test_*.py --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report xml:cov.xml
+          python -m pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report xml:cov.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
